# HOI4

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  HOI4-Memory-Toolkit.code-workspace  PLAN.md  README.md  init-repo.ps1  pyproject.toml
.claude/: settings.json
.claude/agents/: error-fixer.md  log-watcher.md  signature-finder.md
.claude/commands/: bump-versions.md  healthcheck.md  run-all.md  scan-conflicts.md  watch-logs.md
.claude/hooks/: log_tool.py
data/: signatures.json  signatures.lua  wemod_targets.json  wemod_targets.lua
docs/: CE-RELOCATION-1.19.md  CHEAT-TARGETS.md  DEBUGGING.md  METHODOLOGY.md  MODS.md  RE-FINDINGS-1.19.md  RUN-LOG.md  SETUP-VSCODE.md  ULTRACODE-PLAN.md
lua/: aobgen.lua  find_player_base.lua  healthcheck.lua
lua/lib/: aoblib.lua
tables/: HOI4 1.19 Political Power.CT  HOI4 Console Cheats.CT
tests/: test_tools.py
tools/: ce_log_watch.py  extract_baseline.py  hoi4_accum.py  hoi4_console.py  hoi4_dbg.py  hoi4_find_pp.py  hoi4_find_val.py  hoi4_freeze_find.py  hoi4_log_watch.py  hoi4_mem.py  hoi4_mp_test.py  hoi4_pp_bisect.py  hoi4_scan.py  hoi4_struct.py  hoi4_struct_map.py  hoi4_triangulate.py  mod_conflict_scan.py  mod_version_bump.py  ocr.ps1  screencap.ps1
