# No runtime dependencies — the tools use only the Python standard library.
# This file exists for editor/linter config and project metadata.

[project]
name = "hoi4-memory-toolkit"
version = "0.1.0"
description = "Keep Hearts of Iron IV cheats and mods working across game patches."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Brock" }]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Conservative defaults; tools are stdlib-only scripts.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # long help strings are fine
